fix: remove no-wrap for org name

--- a/udata_front/theme/gouvfr/assets/less/layout/grid.less
+++ b/udata_front/theme/gouvfr/assets/less/layout/grid.less
@@ -51,7 +51,7 @@
 }
 
 .inline-flex {
-    display: inline-flex;
+    display: inline-flex !important;
 }
 
 .flex-1 {
